--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".SplashActivity"
             android:noHistory="true"
@@ -20,12 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactActivity"></activity>
-        <activity android:name=".ConnectionActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".ContactActivity" />
+        <activity
+            android:name=".ConnectionActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".Cards.MenuCards" />
         <activity android:name=".Cards.CreateCards" />
-
+        <activity android:name=".Cards.CardsCollection"></activity>
     </application>
 
 </manifest>
