--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wcs.germain.winstatehack">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +16,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.wcs.germain.winstatehack.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+        <activity android:name=".HomeActivity" />
         <activity
             android:name=".SplashActivity"
             android:noHistory="true"
@@ -20,12 +38,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContactActivity"></activity>
-        <activity android:name=".ConnectionActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Cards.MenuCards" />
-        <activity android:name=".Cards.CreateCards" />
-
+        <activity android:name=".ContactActivity" />
+        <activity
+            android:name=".ConnectionActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".MenuCards" />
+        <activity android:name=".CreateCards" />
     </application>
 
 </manifest>
