--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".MenuCards" />
         <activity android:name=".CreateCards" />
         <activity android:name=".CardsCollection"></activity>
+        <activity android:name=".GetACard"></activity>
     </application>
 
 </manifest>
